--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://conference.bonsai.dev/2024/">
+<meta http-equiv="refresh" content="0; url=https://conference.bonsai-rx.org/2024/">
